# InventoryHero

./: .coveragerc  .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  save  settings.gradle  vue.config.js
.github/workflows/: docs.yaml  nightly.yml  static.yml
app/: build.gradle
backend/: app.py  database.py  decorators.py  flask_config.py  requirements.txt
backend/db/: create_admin.py
backend/endpoints/: AdminEndpoint.py  Helper.py  HouseholdEndpoint.py  ProductEndpoint.py  StorageEndpoint.py  User.py
backend/exceptions/: inventory_hero_exceptions.py
backend/mail/: Mail.py
backend/models/: Product.py  StorageContainer.py  TokenBlacklist.py  User.py
backend/sockets/: SidManager.py  sockets.py
backend/utils/: validation.py
data/: inventoryhero.db
deploy/: .dockerignore  Dockerfile  default.conf  nginx-selfsigned.crt  nginx-selfsigned.key
dev/: generate_ts.py
docker/: Dockerfile  default.conf  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh
docs/: index.md
docs/.vitepress/: config.mts
frontend/: .eslintrc-auto-import.json  .gitignore  .prettierrc  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  sketches.txt  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
frontend/public/: theme-presets.json
frontend/src/: App.vue  AppWrapper.vue  global.scss  main.ts  router.d.ts  vite-env.d.ts  vue-virtual-scroller.d.ts
gradle/wrapper/: gradle-wrapper.properties
ih/: __init__.py  app.py  main.py  requirements.txt
ih/alembic/: alembic.ini  env.py  script.py.mako
ih/core/: config.py
ih/db/: db_setup.py  init_db.py
ih/i18n/: __init__.py  localizer.py
ih/locales/: de.json  en.json
ih/repositories/: HouseholdRepository.py  ItemRepository.py  ProductRepository.py  StorageRepository.py  UserRepository.py  factory.py
ih/routes/: __init__.py
inventoryhero/: README.md  package.json
public/: index.html
src/: App.vue  global.css  lang.js  main.js
src/components/: AddButton.vue  BiggerButtonCenter.vue  BoxCard.vue  Dock.vue  HelloWorld.vue  InputDropdown.vue  InputStarred.vue  Tag.vue  (+13 more)
tests/: conftest.py
(+543 files in other folders)
