[project]
name = "ih"
version = "0.0.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
#readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "APScheduler==3.11.0",
    "attrs==25.3.0",
    "bcrypt==4.3.0",
    "fastapi==0.115.13",
    "fastapi-utils==0.8.0",
    "h11==0.16.0",
    "idna==3.10",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "mypy_extensions==1.1.0",
    "passlib==1.7.4",
    "psutil==5.9.8",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic-to-typescript==2.0.0",
    "pydantic_core==2.33.2",
    "PyJWT==2.10.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "sqlmodel==0.0.24",
    "starlette==0.46.2",
    "tenacity (==9.1.2)",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "tzlocal==5.3.1",
    "uvicorn==0.34.3"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Console script for running the app
[tool.poetry.scripts]
ih = "ih.main:main"

